<resources>
    <string name="dateformat">YYYY-MM-DD</string>
    <string name="app_name">Basic</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="utcClock">UTC</string>
    <string name="lclClock">Local</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="title_activity_scrolling2">ScrollingActivity2</string>
    <string name="flight_entry_action">Create Flight</string>
    <string name="flight_entry_begin">Log a Flight</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="dateerror">Enter a valid date in yyyy-mm-dd</string>
    <string name="regerror">Enter a valid registration in GXXX or C-FXXX</string>
    <string name="typeerror">Enter a valid aircraft type</string>
    <string name="timeerror">Enter a valid flight time</string>
    <string name="aerodromeerror">Enter a valid aerodrome code</string>
    <string name="nameerror">Enter a valid PIC name</string>
    <string name="nochecked">Please select at least one flight type</string>
    <string name="datepicker">Set Date</string>
    <string name="Aircraft">Aircraft</string>
    <string name="Registration">Registration</string>
</resources>
