<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".InitialEntry"
    tools:showIn="@layout/activity_scrolling">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/entry_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:autofillHints="date"
                android:ems="8"
                android:gravity="center_horizontal"
                android:hint="@string/dateformat"
                android:inputType="date"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <Button
                android:id="@+id/datepick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:onClick="showDatePickerDialog"
                android:text="@string/datepicker" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/plane_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:gravity="center_horizontal"
                android:text="@string/Aircraft"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <EditText
                android:id="@+id/entry_reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:ems="6"
                android:gravity="center"
                android:hint="@string/Registration"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/entry_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="6"
                    android:gravity="center"
                    android:hint="Flight Time"
                    android:inputType="numberDecimal" />

                <EditText
                    android:id="@+id/air_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="6"
                    android:gravity="center"
                    android:hint="Airtime"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/check_day"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Day" />

                <CheckBox
                    android:id="@+id/check_night"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Night" />

                <CheckBox
                    android:id="@+id/check_ifr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Instrument" />

                <CheckBox
                    android:id="@+id/check_xc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="XCountry" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/entry_origin"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="12dp"
                    android:ems="5"
                    android:gravity="center"
                    android:hint="Origin"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/entry_dest"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="12dp"
                    android:ems="5"
                    android:gravity="center"
                    android:hint="Destination"
                    android:inputType="textPersonName" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <EditText
                android:id="@+id/entry_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="16"
                android:hint="Pilot in Command"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/entry_pax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="16"
                android:hint="Passengers"
                android:inputType="textMultiLine|textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/initial_entry"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/flight_entry_action" />

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/cancel"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>